@@ -1,12 +1,0 @@
-Bitstream Cyberbit is a TrueType font. It is an international font, containing
-characters from many languages. Each character is encoded with its Unicode
-value, according to Unicode 2.0 standards.
-
-Cyberbit was developed by Bitstream to provide Unicode Consortium members with
-a test font. It is therefore distributed freely to customers that need advanced
-multilingual fonts for testing and other non-commercial uses. Customers that
-wish to use Cyberbit for other purposes must license the font from Bitstream.
-
-Cyberbase is an ISO-8859-X-only version of Cyberbit, the CJK parts are not
-included -- if you want those too, consider using the cyberbit-ttf package
-instead.
