@@ -1,14 +1,0 @@
-# $NetBSD: Makefile,v 1.11 2020/11/29 20:50:52 nia Exp $
-
-PKGNAME=	cyberbase-ttf-2.0
-PKGREVISION=	8
-FONT_FILE=	Cyberbase.ZIP
-
-COMMENT=	Cyberbit minus CJK subset, for ISO-8859-x languages
-
-CONFLICTS=	cyberbit-ttf-[0-9]*
-
-NO_BUILD=	yes
-
-.include "../../fonts/cyberbit-ttf/Makefile.common"
-.include "../../mk/bsd.pkg.mk"
