@@ -1,3 +1,0 @@
-@comment $NetBSD: PLIST,v 1.9 2018/01/07 21:56:35 rillig Exp $
-share/doc/cyberbit-ttf/ReadMe.htm
-share/fonts/X11/TTF/Cyberbas.ttf
