@@ -1,8 +1,0 @@
-$NetBSD: distinfo,v 1.7 2021/10/26 10:27:04 nia Exp $
-
-BLAKE2s (cyberbit-ttf/Cyberbase.ZIP) = 3b31c31e1e5c0e77820c54b66cab5aad7a54529b7bf852353a0ed7b06ab368e8
-SHA512 (cyberbit-ttf/Cyberbase.ZIP) = 1d828cdaf2cb609dace3777584c5b82b0272c848fa6456f036bb4eaa20ad86bd4daa1947a96f41481cfe2571c1ae88f366eb8db6cf657a55f2c9b890d8a93e6b
-Size (cyberbit-ttf/Cyberbase.ZIP) = 174219 bytes
-BLAKE2s (cyberbit-ttf/ReadMe.htm) = 24253fef2de5642fe66017023355d6c87452678e79eb4095827b780a9dabd8b4
-SHA512 (cyberbit-ttf/ReadMe.htm) = fd6d6e793d4704002c2abd7fa7ba10ee3120e10dab8df20284e29bd8cec2834d9b909248a8097fa58c50151cd4c05e1884ab10a70ac317058caa8970a65c9dda
-Size (cyberbit-ttf/ReadMe.htm) = 34832 bytes
