@@ -1,15 +1,0 @@
-# $NetBSD: Makefile,v 1.12 2020/11/06 18:04:25 maya Exp $
-
-PKGNAME=	cyberbit-ttf-2.0
-PKGREVISION=	8
-FONT_FILE=	Cyberbit.ZIP
-
-COMMENT=	Multilingual TrueType font from Bitstream
-
-CONFLICTS=	cyberbase-ttf-[0-9]*
-
-NO_CONFIGURE=	yes
-NO_BUILD=	yes
-
-.include "../../fonts/cyberbit-ttf/Makefile.common"
-.include "../../mk/bsd.pkg.mk"
