@@ -1,33 +1,0 @@
-# $NetBSD: Makefile.common,v 1.31 2019/11/02 22:24:38 rillig Exp $
-#
-# used by fonts/cyberbit-ttf/Makefile
-# used by fonts/cyberbase-ttf/Makefile
-
-DISTNAME=	# empty
-CATEGORIES=	fonts
-MASTER_SITES=	http://ftp.netscape.com/pub/communicator/extras/fonts/windows/
-DISTFILES=	${FONT_FILE} ReadMe.htm
-
-MAINTAINER=	pkgsrc-users@NetBSD.org
-HOMEPAGE=	http://www.bitstream.com/
-LICENSE=	cyberbit-ttf-license
-
-RESTRICTED=		Redistribution not permitted; single user license only.
-NO_SRC_ON_CDROM=	${RESTRICTED}
-NO_SRC_ON_FTP=		${RESTRICTED}
-NO_BIN_ON_CDROM=	${RESTRICTED}
-NO_BIN_ON_FTP=		${RESTRICTED}
-
-USE_TOOLS+=	unzip
-
-DIST_SUBDIR=	cyberbit-ttf
-
-EXTRACT_ONLY=		${FONT_FILE}
-
-INSTALLATION_DIRS+=	share/doc/cyberbit-ttf
-
-post-install:
-	${INSTALL_DATA} ${_DISTDIR}/ReadMe.htm \
-		${DESTDIR}${PREFIX}/share/doc/cyberbit-ttf
-
-.include "../../mk/fonts.mk"
