@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2025,v 1.871 2025/01/31 09:10:03 pho Exp $
+$NetBSD: CHANGES-2025,v 1.872 2025/01/31 09:32:05 wiz Exp $
 
 Changes to the packages collection and infrastructure in 2025:
 
@@ -1122,3 +1122,5 @@ Changes to the packages collection and infrastructure in 2025:
 	Updated security/hs-entropy to 0.4.1.11 [pho 2025-01-31]
 	Updated devel/hs-uuid to 1.3.16 [pho 2025-01-31]
 	Updated textproc/hs-text-rope to 0.3 [pho 2025-01-31]
+	Removed fonts/cyberbit-ttf [wiz 2025-01-31]
+	Removed fonts/cyberbase-ttf [wiz 2025-01-31]
